--- a/.github/workflows/master_raviranjankumarempn1075.yml
+++ b/.github/workflows/master_raviranjankumarempn1075.yml
@@ -38,7 +38,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: raviranjankumarempn1075.azurewebsites.net
     
     steps:
       - name: Download artifact from build job
